[package]
name = "schroedinger-extractor"
description = "Extract avids from shuukan bilibili ranking videos"
version = "0.1.0"
edition = "2021"
author = "OverflowCat <overflow.cat>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
once_cell = "1.18.0"
paddleocr = { version = "0.3.0", features = ["parse"] }
